--- a/index.html
+++ b/index.html
@@ -303,6 +303,101 @@
             </div>
         </div>
     </div>
+    <!-- quote -->
+    <div class="quote">
+        <div class="container">
+            <q>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores repellat corrupti, ipsum saepe ex enim nihil impedit possimus, doloremque repudiandae</q>
+            <span>John Doe</span>
+        </div>
+    </div>
+    <!-- pricing -->
+    <div class="pricing" id="pricing">
+        <div class="container">
+            <div class="main-heading">
+                <h2>Pricing</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut asperiores, nulla ipsam consequuntur
+                    odit iusto molestiae ab nam.</p>
+            </div>
+            <div class="plans">
+                <div class="plan">
+                    <div class="head">
+                        <h3>Basic</h3>
+                        <span>19</span>
+                    </div>
+                    <ul>
+                        <li>Feature No 1</li>
+                        <li>Extra Feature</li>
+                        <li>Feature No 2</li>
+                        <li>Feature</li>
+                    </ul>
+                    <div class="foot">
+                        <a href="#">Buy Now</a>
+                    </div>
+                </div>
+                <div class="plan">
+                    <div class="head">
+                        <h3>Premium</h3>
+                        <span>29</span>
+                    </div>
+                    <ul>
+                        <li>Feature No 1</li>
+                        <li>Extra Feature</li>
+                        <li>Feature No 2</li>
+                        <li>Feature</li>
+                    </ul>
+                    <div class="foot">
+                        <a href="#">Buy Now</a>
+                    </div>
+                </div>
+                <div class="plan">
+                    <div class="head">
+                        <h3>Pro</h3>
+                        <span>39</span>
+                    </div>
+                    <ul>
+                        <li>Feature No 1</li>
+                        <li>Extra Feature</li>
+                        <li>Feature No 2</li>
+                        <li>Feature</li>
+                    </ul>
+                    <div class="foot">
+                        <a href="#">Buy Now</a>
+                    </div>
+                </div>
+                <div class="plan">
+                    <div class="head">
+                        <h3>Platinum</h3>
+                        <span>49</span>
+                    </div>
+                    <ul>
+                        <li>Feature No 1</li>
+                        <li>Extra Feature</li>
+                        <li>Feature No 2</li>
+                        <li>Feature</li>
+                    </ul>
+                    <div class="foot">
+                        <a href="#">Buy Now</a>
+                    </div>
+                </div>
+            </div>
+            <p class="contact-text">
+                Contact us if you have special request
+            </p>
+            <a href="#contact" class="contact-link">Contact Us</a>
+        </div>
+    </div>
+    <!-- subscribe  -->
+    <div class="subscribe">
+        <div class="container">
+            <form action="">
+                <i class="fa fa-envelope fa-lg"></i>
+                <input type="email" name="email" placeholder="Your Email"/>
+                <input type="submit" name="subscribe" />
+            </form>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut asperiores, nulla ipsam consequuntur
+                odit iusto molestiae ab nam.</p>
+        </div>
+    </div>
 </body>
 
 </html>
