--- a/index.html
+++ b/index.html
@@ -390,12 +390,37 @@
     <div class="subscribe">
         <div class="container">
             <form action="">
-                <i class="fa fa-envelope fa-lg"></i>
+                <i class="far fa-envelope fa-lg"></i>
                 <input type="email" name="email" placeholder="Your Email"/>
                 <input type="submit" name="subscribe" />
             </form>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut asperiores, nulla ipsam consequuntur
                 odit iusto molestiae ab nam.</p>
+        </div>
+    </div>
+    <!-- contact -->
+    <div class="contact" id="contact">
+        <div class="container">
+            <div class="main-heading">
+                <h2>Contact Us</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut asperiores, nulla ipsam consequuntur
+                    odit iusto molestiae ab nam.</p>
+            </div>
+            <div class="content">
+                <form action="#">
+                    <input class="main-input" type="text" name="name" placeholder="Your Name">
+                    <input class="main-input" type="email" name="email" placeholder="Your Email">
+                    <textarea class="main-input" name="message" placeholder="Your Message"></textarea>
+                    <input type="submit" value="Send Message">
+                </form>
+                <div class="info">
+                    <h4>Get In Touch</h4>
+                    <span class="phone">++00 123.456.789</span>
+                    <span class="phone">++00 123.456.789</span>
+                    <h4>Where We Are</h4>
+                    <address>Awesome Address 17 <br /> New York, NYC <br /> 123-4567-890 <br />USA</address>
+                </div>
+            </div>
         </div>
     </div>
 </body>
