--- a/index.html
+++ b/index.html
@@ -423,6 +423,20 @@
             </div>
         </div>
     </div>
+    <!-- footer -->
+    <div class="footer">
+        <div class="container">
+            <img src="images/logo.png" alt="logo">
+            <p>We Are Social</p>
+            <div class="social-icons">
+                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fas fa-home"></i>
+                <i class="fab fa-linkedin"></i>
+            </div>
+            <p class="copyright">&copy;2024 <span>Kasper</span>All Rights Reserved</p>
+        </div>
+    </div>
 </body>
 
 </html>
