--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         </div>
     </div>
     <!-- portfolio -->
-    <div class="portfolio">
+    <div class="portfolio" id="portfolio">
         <div class="container">
             <div class="main-heading">
                 <h2>Portfolio</h2>
